--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,19 +1,12 @@
 
-
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
 <style>
 * {
   box-sizing: border-box;
 }
 
-body { min-height: 100%
-  margin: 0;
-  justify-content: center;
+body {
   font-family: Arial, Helvetica, sans-serif;
 }
-
 
 /* Style the header */
 header {
@@ -26,9 +19,10 @@ header {
 
 /* Create two columns/boxes that floats next to each other */
 nav {
+  flex-grow: 33px;
   float: left;
-  width: 25.2%;
-   /* only for demonstration, should be removed */
+  width: 30%;
+  height: 300px; /* only for demonstration, should be removed */
   background: #ccc;
   padding: 20px;
 }
@@ -40,11 +34,12 @@ nav ul {
 }
 
 article {
+  flex-shrink: 50px;
   float: left;
   padding: 20px;
-  width: 70.5%;
+  width: 70%;
   background-color: #f1f1f1;
-   /* only for demonstration, should be removed */
+  height: 300px; /* only for demonstration, should be removed */
 }
 
 /* Clear floats after the columns */
@@ -61,7 +56,6 @@ footer {
   text-align: center;
   color: white;
 }
-
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 600px) {
